# DevEv

./: LICENSE  MANIFEST.in  README.md  mesh.npy  mesh_hull.npy  pyproject.toml  requirement.txt  requirements.txt  setup.py  temp.txt  temp_toy.npy
DevEv/: __init__.py  app.py  data_2.7d_DevEv_S07_04.npy
DevEv/Viewer3D/: EdgeSphere.py  RoomMesh.py  SegmentManager.py  TexturedMesh.py  Viewer3DApp.py  objects.py  utils.py
DevEv/ViewerCorrection/: GaussianProcess.py  ThreeIntWidget.py  WidgetCorrection.py  WidgetCorrectionHand.py  WidgetCorrectionToys.py  utils.py
DevEv/ViewerMultiFile/: WidgetMultiFile.py
DevEv/ViewerVideo/: VideoThreadApp.py  VideoWidgetApp.py
DevEv/metadata/: DevEvData_2024-02-02.csv
DevEv/metadata/CameraParameters/: camera_zoom_in.npy  camera_zoom_in_old.npy  camera_zoom_out.npy  camera_zoom_out_old.npy  cameras.npy
DevEv/metadata/RoomData/: attention.txt  room_setup2.json
DevEv/metadata/RoomData/scene/: LAB.mtl  Room.mtl
DevEv/metadata/RoomData/scene/Textures/: L1.tiff  L2.tiff  L3.tiff  L4.tiff  L5.tiff  L6.tiff  elephant.tiff
DevEv/metadata/RoomData/scene/scene/: Room.mtl
src/DevEv-v1.2/: main.py
src/DevEv-v1.2/Viewer3D/: Viewer3DApp.py
src/DevEv-v1.2/ViewerCorrection/: GaussianProcess.py  WidgetCorrection.py
src/DevEv-v1.2/metadata/CameraParameters/: camera_BottomLeft_trim.npy  camera_MobileInfants_trim.npy
src/DevEv-v1.2/metadata/RoomData/: room_setup_obj.npy
