[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DevEv"
version = "0.0.1"
authors = [
  { name="Nicolas Aziere", email="nicolas.aziere@gmail.com" },
]
description = ""
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/azieren/DevEv"
"Bug Tracker" = "https://github.com/azieren/DevEv/issues"
